feat: add member's middleware feat: getting member's profile
