# app/endpoint/member.go
@@ -14,7 +14,8 @@ var Member = new(member)
 // Nonce
 // @ID           MemberNonce
 // @Router       /member/nonce/{address} [GET]
-// @Summary      Get Member Signin Nonce String
+// @Summary      Member Signin Nonce
+// @Description  Getting nonce string to be signed
 // @Tags         Member
 // @Accept       json
 // @Produce      json
@@ -35,4 +36,18 @@ func (*member) Nonce(c echo.Context) (err error) {
 func (*member) Signin(c echo.Context) (err error) {
     ctx, req := app.ContextBinding[model.MemberSigninReq](c)
     return ctx.SendResponse(service.NewMember().Signin(req))
+}
+
+// Profile
+// @ID           MemberProfile
+// @Router       /member/{address} [GET]
+// @Summary      Member Profile
+// @Description  Getting member's profile using address
+// @Tags         Member
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  app.Response  "Response success"
+func (*member) Profile(c echo.Context) (err error) {
+    ctx, req := app.MemberContextAndBinding[model.MemberAddressParam](c)
+    return ctx.SendResponse(service.NewMember().Profile(req.Address))
 }
