# assets/docs/swagger.json
@@ -9,6 +9,7 @@
     "paths": {
         "/member/nonce/{address}": {
             "get": {
+                "description": "Getting nonce string to be signed",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,7 +19,7 @@
                 "tags": [
                     "Member"
                 ],
-                "summary": "Get Member Signin Nonce String",
+                "summary": "Member Signin Nonce",
                 "operationId": "MemberNonce",
                 "responses": {
                     "200": {
@@ -37,6 +38,30 @@
                                     }
                                 }
                             ]
+                        }
+                    }
+                }
+            }
+        },
+        "/member/{address}": {
+            "get": {
+                "description": "Getting member's profile using address",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Member"
+                ],
+                "summary": "Member Profile",
+                "operationId": "MemberProfile",
+                "responses": {
+                    "200": {
+                        "description": "Response success",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
                         }
                     }
                 }
@@ -99,9 +124,36 @@
                 }
             }
         },
+        "model.MemberProfile": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "avatar": {
+                    "description": "optional",
+                    "type": "string"
+                },
+                "intro": {
+                    "description": "optional",
+                    "type": "string"
+                },
+                "nickname": {
+                    "description": "optional",
+                    "type": "string"
+                }
+            }
+        },
         "model.MemberSigninRes": {
             "type": "object",
             "properties": {
+                "profile": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.MemberProfile"
+                        }
+                    ]
+                },
                 "token": {
                     "type": "string"
                 }
